# Group-AI-Plan-Thingy

./: .gitignore  README.md  get_ip.py  pyproject.toml
chat/: consumers.py  models.py  urls.py  utils.py  views.py
chat/migrations/: 0001_initial.py  0002_aitokenusage.py  0003_roomvisit.py
chat/templates/chat/: index.html  room.html
config/: asgi.py  settings.py  urls.py
static/css/: style.css
templates/account/: email_confirm.html  login.html  logout.html  password_reset.html  signup.html
templates/chat/: index.html  room.html  sidebar.html
templates/socialaccount/: login.html  signup.html
