[project]
name = "group-ai-plan-thingy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.8",
    "django-environ>=0.12.0",
    "django-htmx>=1.26.0",
    "google-genai>=1.52.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.13",
    "uvicorn>=0.38.0",
]
